--- a/usbSerialExamples/src/main/res/layout/tank_popup.xml
+++ b/usbSerialExamples/src/main/res/layout/tank_popup.xml
@@ -4,14 +4,14 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:background="#000"
-    android:padding="10px">
+    android:padding="10dp">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Set Tank Size"
         android:layout_gravity="center"
-        android:textSize="50dp"
+        android:textSize="50sp"
         android:textColor="#fff"/>
 
     <Button
